ks8-manifests/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: api 
  namespace: workshop 
  labels:
    role: api 
    env: demo 
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: api 
  template: 
    metadata:
      labels:
        role: api 
    spec:
      containers:
      - name: api 
        image: ..
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
