ks8-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api 
  namespace: workshop 
spec: 
  ports:
  - port: 8080
    protocol: TCP
    type: ClusterIP
    selector:
      role: api
