ks8-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: workshop
spec:
  ports:
  - port: 5173
    protocol: TCP
    type: ClusterIP
    selector:
      role: frontend
      env: demo
